src/objects/loan__Loan_Approval_Prerequisites__c.object
<CustomObject>
    <description>Loan Approval depends on the customer&apos;s business. It is entirely customer specific.</description>
    <fields>
        <fullName>loan__Is_Training_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this box is checked, loan can not be approved without training details</description>
        <inlineHelpText>Check this when you want training details mandatory while loan approval.</inlineHelpText>
        <label>Is Training Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Product__c</fullName>
        <label>Loan Product</label>
        <referenceTo>loan__Loan_Product__c</referenceTo>
        <relationshipLabel>Loan Approval Prerequisites</relationshipLabel>
        <relationshipName>Loan_Approval_Prerequisites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Minimum_Number_of_Deposits__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Number of Deposits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Minimum_Savings_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Savings Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Minimum_Waiting_Time_For_Loan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Waiting Time For Loan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Track_Balance_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Balance Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Track_Cash_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Cash Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Track_Employment_Business_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Employment / Business Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Track_Family_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Family Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Track_Family_Employment_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Family Employment Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Track_Financial_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Financial Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Track_Home_Evaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Home Evaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Track_Other_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Other Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Track_Ratios__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Ratios</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Track_Sales_Income_Estimate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Sales / Income Estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Track_Sales_by_Product_Gross_Margin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Sales by Product &amp; Gross Margin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Track_Savings_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Savings History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Track_Summary_of_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Summary of Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Use_Sum_of_All_Deposits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Sum of All Deposits</label>
        <type>Checkbox</type>
    </fields>
    <label>Loan Approval Prerequisites</label>
    <nameField>
        <displayFormat>LAPR-{00000000}</displayFormat>
        <label>Loan Approval Prerequisites ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Approval Prerequisites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>